--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-   padding: 2rem 0px;
+   padding: 1rem 0px;
     flex-wrap: wrap;
     gap: 3rem;
 }
@@ -74,3 +74,254 @@ list-style: none;
     color: black;
     font-family: 'Advent Pro', sans-serif;
 }
+/* ----------Hero Section------------ */
+
+.hero-container{
+    background-image: url("image/main_image_bg.jpg");
+    background-position: center;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+ background-size: cover;
+    width: 100%;
+    padding: 1rem 0px 3rem 0px;
+    display: flex;
+    justify-content: center;
+ text-align: center;
+}
+.hero-inner{
+  margin-top: 1rem;
+}
+.hero-inner h2{
+    font-size: 160px;
+    color: white;
+    font-family: 'Advent Pro', sans-serif;
+    border-bottom: 1px solid white;
+    padding: 0px 2rem .5rem 2rem;
+}
+.winter {
+    color: white;
+    font-size: 25px;
+    margin-top: 2rem;
+    font-family:  sans-serif;
+    font-style: italic;
+
+}
+.images {
+    margin-top: 2rem;
+    display: flex;
+    gap: 1.5rem;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+    padding: 0px 1rem;
+}
+
+.left {
+    background-image: url("image/slide-image-1.jpg");
+    width: 450px;
+    height: 650px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.right {
+    background-image: url("image/slide-image-2.jpg");
+    width: 450px;
+    height: 650px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.left-inner,
+.right-inner {
+    
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left:hover .left-inner,
+.right:hover .right-inner {
+    background-color: rgba(0, 0, 0, 0.575);
+    transition: .3s;
+}
+
+.left:hover .btn {
+    padding: 2rem 0px;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 40px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    visibility: visible;
+        transition: .5s;
+}
+.right:hover .btn {
+    padding: 2rem 0px;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 40px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    visibility: visible;
+        transition: .5s;
+}
+.btn{
+    visibility: hidden;
+}
+
+
+
+
+@media(max-width:1350px){
+    .col-1,
+    .col-img {
+        width: 500px;
+    }
+      .col-img::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.281); 
+        /* z-index: 1; */
+    }
+    
+}
+@media(max-width:1070px){
+    .col-1,
+    .col-img {
+        width: 400px;
+    }
+      .col-img::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.281); 
+        /* z-index: 1; */
+    }
+    
+}
+
+
+
+
+
+
+
+@media(max-width:850px){
+    .hero-inner h2{
+        font-size: 6rem;
+ /* padding: 0px 1rem .5rem 1rem; */
+ padding: 0;
+    }
+    .fashion-container h2{
+        font-size: 100px;
+        color: white;
+        border-bottom: 2px solid white;
+        padding: 0px 2rem 0px 2rem;
+        font-family: 'Advent Pro', sans-serif;
+    }
+}
+
+@media(max-width:510px){
+   .hero-inner h2{
+        font-size: 5rem;
+ /* padding: 0px 1rem .5rem 1rem; */
+ padding: 0;
+    }
+    .left{
+        width: 400px;
+    }
+    .right{
+        width: 400px;
+    }
+    .fashion-container h2{
+        font-size: 70px;
+        color: white;
+        border-bottom: 2px solid white;
+        padding: 0px 2rem 0px 2rem;
+        font-family: 'Advent Pro', sans-serif;
+    }
+   
+}
+@media(max-width:405px){
+    .mini-header{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .main-header{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .winter{
+  font-size: 20px;
+    }
+     .hero-inner h2{
+        font-size: 4rem;
+ /* padding: 0px 1rem .5rem 1rem; */
+ padding: 0;
+    }
+     .left{
+        width: 340px;
+    
+    }
+    .right{
+        width: 340px;
+             
+    }
+    .left:hover .btn {
+    padding: 1.5rem 0px;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 30px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    visibility: visible;
+        transition: .5s;
+}
+.right:hover .btn {
+    padding: 1.5rem 0px;
+    background-color: white;
+    color: black;
+    width: 100%;
+    font-size: 30px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    visibility: visible;
+        transition: .5s;
+}
+.col-1,
+.col-img {
+    width: 350px;
+}
+  .col-img::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.281); 
+    /* z-index: 1; */
+}
+}
+
+
