--- a/style.css
+++ b/style.css
@@ -342,17 +342,17 @@ list-style: none;
     color: gray;
 }
 .product-item{
-    width: 80%;
+    width: 100%;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
-   column-gap: 2rem;
+   column-gap: 5rem;
    row-gap: 7rem;
 }
 .product{
-    width: 350px;
-    height: 400px;
+    width: 330px;
+    height: 390px;
     text-align: center;
     position: relative;
 }
@@ -525,6 +525,75 @@ list-style: none;
       border-radius: 4px;
       margin-top: 1rem; 
 
+}
+/* -- --------instashop----------  */
+.onea-container{
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+}
+.onea-text {
+    margin-bottom: 5rem;
+}
+.onea-text p{
+    font-size: 60px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 600;
+    margin-bottom: .5rem;
+}
+.onea-text span{
+    color: gray;
+    font-size: 19px;
+    font-family: 'Advent Pro', sans-serif;
+}
+
+.instaimg {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.img-div{
+    position: relative;
+}
+.img-div img{
+    width: 253px;
+    height: 400px;
+    object-fit: cover;
+}
+.img-div:hover::before{
+  content:  url("image/instagram-logo-24\ \(1\).png") "\A @onea";
+    position: absolute;
+    white-space: pre;
+    background-color: rgba(27, 25, 25, 0.849);
+  inset: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  flex-direction: column;
+  font-family: 'Advent Pro', sans-serif;
+  transition: .3s ease;
+
+}
+
+.brands{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    flex-wrap: wrap;
+}
+.brands img{
+    width: 120px;
+    height: 100px;
+    object-fit: scale-down;
 }
 
 
