--- a/style.css
+++ b/style.css
@@ -49,6 +49,25 @@
     justify-content: center;
     align-items: center;
     gap: 5px;
+    position: relative;
+}
+.store::before{
+    content: '2';
+    background-color: black;
+    width: 25px;
+    height: 25px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-family: 'Advent Pro', sans-serif;
+    position: absolute;
+    left: 90%;
+    top: -50%;
+
 }
 .main-header{
     display: flex;
@@ -57,6 +76,14 @@
    padding: 1rem 0px;
     flex-wrap: wrap;
     gap: 3rem;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: white; /* Add your preferred background color for the sticky header */
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); /* Add a box shadow if desired */
 }
 .logo h2{
     font-family: 'Advent Pro', sans-serif;
@@ -73,6 +100,10 @@ list-style: none;
     font-size: 18px;
     color: black;
     font-family: 'Advent Pro', sans-serif;
+}
+a{
+    text-decoration: none;
+    color: black;
 }
 /* ----------Hero Section------------ */
 
@@ -534,6 +565,8 @@ list-style: none;
     align-items: center;
     text-align: center;
     gap: 1rem;
+    background-color: rgba(245,245,245);
+    padding: 5rem 0px;
 }
 .onea-text {
     margin-bottom: 5rem;
@@ -555,6 +588,7 @@ list-style: none;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+    gap: 0;
 }
 .img-div{
     position: relative;
@@ -591,18 +625,59 @@ list-style: none;
     flex-wrap: wrap;
 }
 .brands img{
-    width: 120px;
+    width: 150px;
     height: 100px;
     object-fit: scale-down;
 }
 
 
+/* ----------footer--------- */
+.footer-container{
+    display: flex;
+    justify-content: center;
+    gap: 6rem;
+    padding: 10rem 2rem;
+    background-color: black;
+    color: white;
+    flex-wrap: wrap;
+ 
+}
 
-
-
-
-
-
+.footer-logo{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    padding: 0px 1rem;
+}
+.footer-logo h2{
+    font-size: 50px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.icon{
+    display: flex;
+    justify-content: left;
+    gap: 1rem;
+    font-size: 25px;
+}
+.ft-head{
+    font-size: 25px;
+    font-family: 'Advent Pro', sans-serif;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.li li{
+    list-style: none;
+    color: gray;
+    font-family: 'Advent Pro', sans-serif;
+}
+.li{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+ 
+}
 
 
 @media(max-width:1350px){
@@ -707,7 +782,7 @@ list-style: none;
 @media(max-width:405px){
     .mini-header{
         flex-direction: column;
-        gap: 1rem;
+        gap: 2rem;
     }
     .main-header{
         flex-direction: column;
